--- a/src/index.scss
+++ b/src/index.scss
@@ -1356,12 +1356,12 @@ button {
 // about
 
 #about {
-  padding-top: 4rem;
+  padding-top: 2rem;
   position: relative;
   padding-inline: 1rem;
 
   @include breakpoints(lg) {
-    padding-top: 3rem;
+    padding-top: 2rem;
   }
 
   #WhatDevFest-container {
@@ -1564,7 +1564,14 @@ button {
 
 // SpeakerSection
 
+.mainSpeakerCard {
+  width: 100%;
+  height: 100%;
+}
+
 .SpeakerCard {
+  width: 100%;
+  height: 100%;
   background-color: var(--black);
   position: relative;
   border-radius: 1rem;
@@ -1715,7 +1722,7 @@ button {
       grid-template-columns: 1fr;
 
       &-img {
-        height: 250px;
+        // height: 250px;
         img {
           object-position: top;
         }
@@ -1732,7 +1739,7 @@ button {
 #SpeakerSection {
   margin-top: 6rem;
   padding-inline: 1rem;
-  margin-bottom: 6rem;
+  margin-bottom: 2rem;
 
   &-heading {
     display: flex;
@@ -1748,21 +1755,36 @@ button {
   }
 
   &-container {
-    margin-top: 3rem;
-    display: grid;
-    grid-template-columns: 1fr;
-    gap: 2rem;
+    width: 100%;
 
-    @include breakpoints(sm) {
-      grid-template-columns: 1fr 1fr;
+    margin-top: 2rem;
+
+    .mainSpeakerCard {
+      width: 100%;
+      height: 100%;
+      padding: 0.5rem;
     }
 
-    @include breakpoints(lg) {
-      grid-template-columns: 1fr 1fr 1fr;
+    .SpeakerCard {
+      width: 100%;
+      height: 100%;
     }
-    @media (min-width: 1200px) {
-      grid-template-columns: 1fr 1fr;
-    }
+
+    // margin-top: 3rem;
+    // display: grid;
+    // grid-template-columns: 1fr;
+    // gap: 2rem;
+
+    // @include breakpoints(sm) {
+    //   grid-template-columns: 1fr 1fr;
+    // }
+
+    // @include breakpoints(lg) {
+    //   grid-template-columns: 1fr 1fr 1fr;
+    // }
+    // @media (min-width: 1200px) {
+    //   grid-template-columns: 1fr 1fr;
+    // }
   }
 }
 
