--- a/src/index.scss
+++ b/src/index.scss
@@ -4599,3 +4599,205 @@ li {
     font-size: var(--fs-18) !important;
   }
 }
+
+#Badge {
+  margin-top: 6rem;
+  &-heading {
+    p {
+      margin-top: 1rem;
+    }
+  }
+  .SectionHeadingText {
+    h2 {
+      font-size: var(--fs-32);
+    }
+  }
+  &-container-main {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 3rem;
+
+    @include breakpoints(lgMax) {
+      grid-template-columns: 1fr;
+      gap: 2rem;
+    }
+
+    &-1 {
+      &-forms {
+        margin-top: 2rem;
+        .InputBox {
+          h4 {
+            font-size: var(--fs-24);
+            font-weight: normal;
+            text-decoration: underline;
+          }
+          &-file {
+            border-radius: 0.5rem;
+            border: 1px solid var(--yellow);
+            margin-top: 1rem;
+            width: 100%;
+            height: 200px;
+            background-color: #0d0e116b;
+            color: var(--yellow);
+            display: grid;
+            place-content: center;
+            text-align: center;
+            .ico {
+              font-size: var(--fs-57);
+            }
+            span {
+              text-transform: lowercase;
+              font-size: --fs;
+            }
+          }
+          input {
+            display: none;
+          }
+        }
+      }
+    }
+    &-2 {
+      width: 100%;
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      gap: 1.5rem;
+
+      &-image {
+        background-color: #0d0e116b;
+        width: 100%;
+        height: 100%;
+        border-radius: 0.5rem;
+        position: relative;
+        // display: grid;
+        // place-content: center;
+        padding: 2rem;
+
+        @include breakpoints(smMax) {
+          padding: 1rem;
+        }
+
+        &-container {
+          width: 100%;
+          height: 100%;
+          max-width: 500px;
+          aspect-ratio: 1;
+          margin-inline: auto;
+        }
+
+        .Badge-container-main-2-image-item {
+          background-color: #fff;
+          position: relative;
+          box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+          border: 2px solid var(--white);
+
+          .main-image {
+            object-fit: cover;
+            object-position: center;
+            position: absolute;
+            top: 0;
+            left: 0;
+          }
+
+          &-square {
+            position: relative;
+            width: 100%;
+            height: 100%;
+            border-radius: 0.5rem;
+            overflow: hidden;
+
+            .topBottom {
+              position: absolute;
+              bottom: 0;
+              left: 0;
+              width: 100%;
+              height: max-content;
+            }
+
+            .topLeft {
+              position: absolute;
+              top: -4px;
+              left: 0;
+              width: 120px;
+              height: max-content;
+            }
+
+            .topRight {
+              position: absolute;
+              top: 0;
+              right: 0;
+              width: 100px;
+              height: max-content;
+            }
+          }
+
+          &-circle {
+            border-radius: 50%;
+            position: relative;
+            width: 100%;
+            height: 100%;
+            overflow: hidden;
+
+            .circleBottom {
+              position: absolute;
+              bottom: 0;
+              left: 0;
+            }
+          }
+        }
+
+        @include breakpoints(smMax) {
+          .Badge-container-main-2-image-item {
+            width: 100%;
+          }
+        }
+      }
+
+      &-options {
+        display: flex;
+        align-items: center;
+        gap: 0.5rem;
+        justify-content: space-between;
+        div {
+          display: flex;
+          align-items: center;
+          gap: 0.5rem;
+        }
+        button {
+          background-color: #ffbb0127;
+          padding: 0.5rem 1rem;
+          border-radius: 5rem;
+          color: var(--yellow);
+          font-size: var(--fs-16);
+          border: 1px solid var(--yellow);
+        }
+        button.active {
+          background-color: var(--yellow);
+          color: var(--black);
+        }
+
+        #downloadBtn {
+          background-color: var(--yellow);
+
+          padding: 0.5rem 1rem;
+          border-radius: 5rem;
+          color: var(--black);
+          font-size: var(--fs-16);
+          border: 1px solid var(--yellow);
+          display: flex;
+          align-items: center;
+          gap: 6px;
+          font-size: var(--fs-18);
+
+          &:hover {
+            background-color: #ffbb01;
+          }
+
+          .ico {
+            margin-top: 1px;
+          }
+        }
+      }
+    }
+  }
+}
